fix project overflow

--- a/app/styles/modules/home-projects-list.scss
+++ b/app/styles/modules/home-projects-list.scss
@@ -75,6 +75,7 @@
         height: 130px;
         margin-bottom: 1rem;
         margin-right: 1rem;
+        overflow: hidden;
         position: relative;
         transition: background-color .3s linear;
         width: 23.5%;
